5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1875_1727.log
== TEST (2019-07-02 19:20:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("digite as notas:")))
n=int(input("digite: "))
ah=notas.shape [1]
s=sum(notas[n,:])
media=s/ah
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:20:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("digite as notas:")))
n=int(input("digite: "))
ah=notas.shape [1]
s=sum(notas[n,:])
media=s/ah
print(round(media,2))

-- EXECUTION TIME:
1.18096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1727/main.py", line 4, in <module>
    n=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:24:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("digite as notas:")))
a=shape(notas) [0]
b=shape(notas) [1]
vm=zeros(a, dtype=float)
for i in range(a):
		for j in range(b):
			if notas[i,j]=max(notas[i,:]):
				vm[i]=notas[i,j]
maior=max(vm)
print(maior)
-- ERROR:
File "XXXX", line 9
    if notas[i,j]=max(notas[i,:]):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:25:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("digite as notas:")))
a=shape(notas) [0]
b=shape(notas) [1]
vm=zeros(a, dtype=float)
for i in range(a):
		for j in range(b):
			if notas[i,j]=max(notas[i,j]):
				vm[i]=notas[i,j]
maior=max(vm)
print(maior)
-- ERROR:
File "XXXX", line 9
    if notas[i,j]=max(notas[i,j]):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:25:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("digite as notas:")))
a=shape(notas) [0]
b=shape(notas) [1]
vm=zeros(a, dtype=float)
for i in range(a):
		for j in range(b):
			if notas[i,j]==max(notas[i,:]):
				vm[i]=notas[i,j]
maior=max(vm)
print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:26:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("digite as notas:")))
a=shape(notas) [0]
b=shape(notas) [1]
vm=zeros(a, dtype=float)
for i in range(a):
		for j in range(b):
			if notas[i,j]==max(notas[i,:]):
				vm[i]=notas[i,j]
maior=max(vm)
print(maior)
-- EXECUTION TIME:
1.20389
-- TEST CASE 1:
---- input:
[[3.0,7.8,3.1,1.4],[0.9,3.5,0.4,0.2],[8.9,2.8,2.1,6.6],[5.1,3.1,8.4,3.8]]
---- correct output:
8.9
---- user output:
8.9
-- TEST CASE 2:
---- input:
[[7.4,7.1,6.8,3.7,3.7],[8.5,3.6,8.7,3.3,7.9],[7.6,1.9,7.0,8.3,5.1],[9.9,9.8,2.8,3.2,0.3],[6.0,5.7,2.6,7.1,8.1],[0.1,5.1,8.3,9.8,9.1]]
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
[[8.1,2.2,4.4],[2.5,7.9,3.5],[7.2,2.3,4.3],[2.3,0.3,8.1],[7.0,0.2,7.1]]
---- correct output:
8.1
---- user output:
8.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:27:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("digite as notas:")))
a=shape(notas) [0]
b=shape(notas) [1]
vm=zeros(a, dtype=float)
for i in range(a):
		for j in range(b):
			if notas[i,j]==max(notas[i,:]):
				vm[i]=notas[i,j]
maior=max(vm)
print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
